<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo"
        app:srcCompat="@drawable/logo" />


    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ic_round_textview"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/email_address"
        android:textSize="12sp"
        />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="420dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/ic_round_textview"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="12sp"
        />



    <Button
        android:id="@+id/button"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="600dp"
        android:layout_marginBottom="250dp"
        android:background="@drawable/ic_round_button"
        android:text="@string/sign_in"
        android:textSize="12sp"
        />





</RelativeLayout>
